# parallel-computing

./: README.md  makefile
01-MPI/01-intro/src/: ipadress.c  main.c
02-comunication/src/: main.c
project-1-sieve-mpi/: performance_evaluation.ipynb  sieve_sequential.c
project-1-sieve-mpi (MPI)/: Makefile  README.md  performance_evaluation.ipynb
project-1-sieve-mpi (MPI)/doc/: pretextual_elements.tex
project-1-sieve-mpi (MPI)/doc/chapters/: 01_introduction.tex  02_related_work.tex  03_methodology.tex  04_development.tex  05_results.tex
project-1-sieve-mpi (MPI)/src/: sieve_core.c
project-1-sieve-mpi/doc/: main.tex
project-1-sieve-mpi/doc/chapters/: 03_methodology.tex  04_development.tex
project-1-sieve-mpi/src/: sieve_parallel.c  sieve_sequential.c  sieve_utils.c
project-1-sieve-mpi/src/include/: sieve.h
project-2-game-of-life (pthreads)/: README.md
project-2-game-of-life (pthreads)/doc/: main.tex  pretextual_elements.tex
project-2-game-of-life (pthreads)/doc/chapters/: 01_introduction.tex  (+3 more)
project-2-game-of-life (pthreads)/src/: game_of_life.c  game_of_life_sequential.c
project-2-game-of-life (pthreads)/tools/: benchmark_notebook.ipynb
project-2-game-of-life-pthreads/: .gitignore  Makefile  README.md
project-2-game-of-life-pthreads/doc/: main.tex  pretextual_elements.tex
project-2-game-of-life-pthreads/src/: game_of_life.c  game_of_life_pthreads.c  game_of_life_sequential.c
project-2-game-of-life-pthreads/tools/: benchmark.ipynb  benchmark_notebook.ipynb  generate_samples.py
project-3-n-body-simulation (MPI + OpenMP)/: CMakeLists.txt  CMakePresets.json  README.md  REPORT_GUIDE.md  assignment-specification.md  benchmark_input.txt  benchmark_results.csv  input.txt  output_mpi1.txt
project-3-n-body-simulation (MPI + OpenMP)/doc/: README.md  main.aux  main.fdb_latexmk  main.fls  main.out  main.tex  references.bib
project-3-n-body-simulation (MPI + OpenMP)/include/nbody/: Body.hpp  Constants.hpp  DomainDecomposition.hpp  IO.hpp  Simulation.hpp
project-3-n-body-simulation (MPI + OpenMP)/scripts/: analysis.ipynb  benchmark.sh  run_hybrid.sh
project-3-n-body-simulation (MPI + OpenMP)/src/: Body.cpp  DomainDecomposition.cpp  IO.cpp  Simulation.cpp  main.cpp
(+11 files in other folders)
